--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,6 +21,13 @@ $cta-darker: #9e465b;
 }
 
 
+@mixin burgerMenuPositioning(){
+  // the menu icon position
+  position: fixed;
+  right: 5rem;
+  top:2.5rem;
+}
+
 // reset
 *{
   &, &:after, &:before{
@@ -84,6 +91,198 @@ h1.headline{
   }
 
 }
+
+// Nav Menu styles
+// TODO: migrate into .header
+.menu-container{
+
+  @include burgerMenuPositioning();
+
+  // container styles
+  width: 80px;
+  height: 80px;
+  background-color: white;
+  border-radius: 200px;
+  box-shadow: 0px 0px 40px rgba(0,0,0,0.12);
+  cursor: pointer;
+  transition: all .2s ease-out;
+  z-index: 6;
+
+  &__inner{
+    position: absolute;
+    width: 60px;
+    height: auto;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    svg{
+      * {
+        transition: all .2s ease-out;
+      }
+      .fill--cta {
+        fill: var(--cta);
+      }
+      path[name="top"]{
+        transform-origin: center right;
+      }
+      path[name="middle"]{
+        transform-origin: center center;
+      }
+      path[name="bottom"]{
+        transform-origin: center center;
+      }
+    } // end svg
+  } // end __inner
+
+  &:hover, &:focus{
+    transform: translateY(-8px);
+    svg{
+      .fill--cta{
+        fill: var(--cta-darker);
+      }
+      path[name="top"]{
+        transform: rotate(15deg);
+      }
+      path[name="bottom"]{
+        transform: translateY(-10px);
+      }
+    }
+  } // end :hover + :focus
+
+  //TODO: convert to checkbox hack and make this the checked style
+  // make the black cross.
+  &:active{
+    background-color: var(--cta);
+    transform: translateY(-4px);
+    svg{
+      .fill--cta{
+        fill: var(--cta);
+      }
+      path[name="top"]{
+        transform-origin: center center;
+        transform: rotate(43deg) translateY(150px) scaleX(1.7);
+      }
+      path[name="bottom"]{
+        transform: translateX(-125px) translateY(-120px) rotate(-48deg) scaleX(1.9);
+      }
+      path[name="middle"]{
+        transform: scale(2.8);
+        border-radius: 200px;
+        fill: transparent;
+      }
+    } // end svg
+  } // end :active
+} // end menu-container
+
+.active {
+  background-color: transparent;
+  box-shadow: 0 0 0 rgba(0,0,0,0);
+} // end active
+
+input[type="checkbox"]{
+  display: none;
+  visibility: hidden;
+} // end input[type=checkbox]
+
+
+#menu:checked{
+  & ~ .menu-container__inner{
+    // transform: translateY(-4px);
+    svg{
+      .fill--cta{
+        fill: var(--cta);
+      }
+      path[name="top"]{
+        transform-origin: center center;
+        transform: rotate(43deg) translateY(150px) scaleX(1.7);
+      }
+      path[name="bottom"]{
+        transform: translateX(-125px) translateY(-120px) rotate(-48deg) scaleX(1.9);
+      }
+      path[name="middle"]{
+        transform: scale(2.8);
+        fill: transparent;
+      }
+    } // end svg
+  }
+} // #menu:checked
+
+.nav-bg{
+
+  @include burgerMenuPositioning();
+
+  // styles
+  width: 80px;
+  height: 80px;
+  transform: scale(0);
+  opacity: 0.01;
+  transition: all .5s ease-out;
+  z-index: 3;
+  border-radius: 200px;
+  background-color: var(--cta);
+  background: radial-gradient(circle at 100%, var(--cta), var(--cta-darker));
+  transform-origin: center center;
+
+  &.active{
+    transform: scale(85);
+    opacity: 1;
+  }
+} // end nav-bg
+
+.nav{
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  text-align: center;
+  z-index: 5;
+  transform: translateY(-320px);
+  transition: transform .6s ease-out;
+  background-color: transparent;
+  ul{
+    list-style: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transform-origin: top;
+    opacity:0;
+    transition: all .4s ease-out .2s;
+    li{
+      color: white;
+      font-size: 40px;
+      font-weight: 700;
+      letter-spacing: -2.2px;
+      background: linear-gradient(to left,
+              rgba(255,255,255,1) 50%,
+              rgba(255,255,255,0) 50%,
+              rgba(255,255,255,0) 100%);
+      background-size: 220%;
+      cursor: default;
+      transition: all .2s ease-out;
+      padding: 10px 15px;
+      &:hover{
+        background-position: 100%;
+        color: var(--cta);
+        transform: translateX(10px);
+      }
+      &:not(:last-child){
+        margin-bottom: 15px;
+      }
+    }
+  }
+  &.active{
+    transform: translateY(0);
+    ul{
+      opacity: 1;
+      transform: translate(-50%, -50%);
+      transition: opacity .4s ease-out;
+      transition-delay: 0;
+      li{
+        cursor: pointer;
+      }
+    }
+  }
+} // end nav
 
 .section{
   width: 100vw;
